--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Contador from "../components/Contador";
       <article class="article">
         <h2>useReducer</h2>
         <hr>
-        <Contador client:visible/>
+        <Contador client:load/>
         <h2>Title</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti
